# ml-service-demo

./: .gitignore  README.md
serve/: .envrc-sample  .pre-commit-config.yaml  Dockerfile  direct-kube-deploy.yaml  pyproject.toml  requirements.txt
serve/src/: app.py
serve/src/helpers/: request.py
serve/src/registry/mlflow/: handler.py
train/: .envrc-sample  pyproject.toml  requirements.txt
train/src/: train_forecasters_mlflow.py
