[project]
name = 'ml-service-tutorial-serve'
description = 'FastAPI service from Machine Learning Engineering With Python'
license = {text = "MIT License"}
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]
dynamic = ["version"]

dependencies = [
    'fastapi',
    'fastapi-cache2',
    'fastapi-utils',
    'mlflow-skinny==2.9.2',
    'pandas',
    'prophet==1.1.5',
    'uvicorn',
]

[project.optional-dependencies]
dev = [
    'mypy',
    'pytest',
    'ruff',
]

[tools.setuptools]
packages = ["src"]

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}