[project]
name = 'ml-service-tutorial-train'
description = 'MLFlow training from Machine Learning Engineering With Python'
license = {text = 'MIT License'}
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]
dynamic = ['version']

# boto3 is required if storing mlflow artifacts on s3
dependencies = [
    'kaggle',
    'mlflow==2.20.3',
    'pandas',
    'prophet==1.1.5',
]

[project.optional-dependencies]
dev = [
    'mypy',
    'pre-commit',
    'pytest',
    'ruff',
]

[tools.setuptools]
packages = ['src']

[build-system]
# Minimum requirements for the build system to execute.
requires = ['setuptools', 'wheel']  # PEP 508 specifications.

[tool.ruff]
line-length = 120
extend-select = ['I']

[tool.ruff.format]
quote-style = 'single'

[tool.setuptools.dynamic]
version = {attr = 'src.__version__'}
